--- a/views/hello.pug
+++ b/views/hello.pug
@@ -2,11 +2,11 @@ block content
 
 
     ul
-        each item in name
+        each item, index in name
             li.list-group-item
+                p #{index + 1}
                 p First Name: #{item.first}
                 p Last Name: #{item.last}
                 p DOB: #{item.born}
 
 
-    button  Login
