--- a/views/creater.pug
+++ b/views/creater.pug
@@ -4,7 +4,7 @@ html(lang='en')
         meta(charset='UTF-8')
         title Title
     body
-        form(action='/creater' method='post')
+        form(action= 'https://cryptic-tor-56909-5784f15687f4.herokuapp.com/creater' method='post')
             | Username
             input(type='text' name='username')
             | First
