--- a/views/delete.pug
+++ b/views/delete.pug
@@ -3,9 +3,33 @@ html(lang='en')
     head
         meta(charset='UTF-8')
         title Title
+        link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' crossorigin='anonymous')
+
+        link(rel='stylesheet', href="./stylesheets/style.css")
+        .container
+            nav.navbar.navbar-expand-md.navbar-light(style='background-color: #1d2731')
+                // <a class="navbar-brand ms-1" th:href="@{/}"><img th:src="@{/images/logo.png}" style="border-radius: 5px"></a>
+                #navbarSupportedContent.collapse.navbar-collapse.d-flex.justify-content-end
+                    ul.navbar-nav.m-1
+                        li.nav-item
+                            a.nav-link(href='/mapper' style='color: #d9b310') Map
+                        li.nav-item
+                            a.nav-link(href='/' style='color: #d9b310') PUDO
+                        li.nav-item
+                            a.nav-link(href='/delete' style='color: #d9b310') Delete
+                        // <li class="nav-item"><a class="nav-link" th:href="@{/team}" style="color: #d9b310">The A-Team</a></li>
+                    ul.navbar-nav.m-1
+                        li.nav-item
+                            a.nav-link(href='/users' style='color: #d9b310') Join Us
+                        li.nav-item
+                            a.nav-link(href='/' style='color: #d9b310') Log In
+                        li.nav-item
+                            a.nav-link(href='/' style='color: #d9b310') Update
+
     body
         form(action= 'https://cryptic-tor-56909-5784f15687f4.herokuapp.com/delete' method='post')
             | Username
             input(type='text' name='username')
             |
-            input(type='submit' value='Log In')
+            input(type='submit' value='Delete')
+script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p' crossorigin='anonymous')
