--- a/views/index.pug
+++ b/views/index.pug
@@ -1,6 +1,27 @@
+link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' crossorigin='anonymous')
+
+link(rel='stylesheet', href="./stylesheets/style.css")
+.container
+  nav.navbar.navbar-expand-md.navbar-light(style='background-color: #1d2731')
+    // <a class="navbar-brand ms-1" th:href="@{/}"><img th:src="@{/images/logo.png}" style="border-radius: 5px"></a>
+    #navbarSupportedContent.collapse.navbar-collapse.d-flex.justify-content-end
+      ul.navbar-nav.m-1
+        li.nav-item
+          a.nav-link(href='/mapper' style='color: #d9b310') Map
+        li.nav-item
+          a.nav-link(href='/' style='color: #d9b310') PUDO
+        li.nav-item
+          a.nav-link(href='/delete' style='color: #d9b310') Delete
+        // <li class="nav-item"><a class="nav-link" th:href="@{/team}" style="color: #d9b310">The A-Team</a></li>
+      ul.navbar-nav.m-1
+        li.nav-item
+          a.nav-link(href='/users' style='color: #d9b310') Join Us
+        li.nav-item
+          a.nav-link(href='/' style='color: #d9b310') Log In
+        li.nav-item
+          a.nav-link(href='/' style='color: #d9b310') Update
 
 
-block content
   h1 #{title}
   h1 #{name}
   p Welcome to #{title}
@@ -8,6 +29,7 @@ block content
 
   button  Login
 
+script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p' crossorigin='anonymous')
 
 
 
