--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,6 +3,30 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+
+    link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' crossorigin='anonymous')
+
+
+    .container
+      nav.navbar.navbar-expand-md.navbar-light(style='background-color: #1d2731')
+
+
+          ul.navbar-nav.m-1
+            li.nav-item
+              a.nav-link(href='/mapper' style='color: #d9b310') Map
+            li.nav-item
+              a.nav-link(href='/' style='color: #d9b310') PUDO
+            li.nav-item
+              a.nav-link(href='/delete' style='color: #d9b310') Delete
+
+          ul.navbar-nav.m-1
+            li.nav-item
+              a.nav-link(href='/users' style='color: #d9b310') Join Us
+            li.nav-item
+              a.nav-link(href='/login' style='color: #d9b310') Log In
+            li.nav-item
+              a.nav-link(href='/' style='color: #d9b310') Update
+
+script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p' crossorigin='anonymous')
+
 
