--- a/views/mapper.pug
+++ b/views/mapper.pug
@@ -4,13 +4,14 @@ head
     meta(http-equiv='x-ua-compatible' content='ie=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
     title Mapper
+
     link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' crossorigin='anonymous')
     script(src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js')
     link(href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet')
     script(src='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.min.js')
     link(rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.css' type='text/css')
-
-
+    link(rel='stylesheet', href="./stylesheets/style.css")
+    body
 br
 br
 #map(style='width: 80vw; height: 80vh; margin: auto')
