--- a/views/users.pug
+++ b/views/users.pug
@@ -1,9 +1,15 @@
-head
-    title= title
+html
+    head
 
 
-    link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' crossorigin='anonymous')
-    link(rel='stylesheet', href='./stylesheets/style.css')
+         link(href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css' rel='stylesheet' integrity='sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3' crossorigin='anonymous')
+
+         link(rel='stylesheet', href='/stylesheets/style.css')
+
+
+
+
+
 
     .container
         nav.navbar.navbar-expand-md.navbar-light(style='background-color: #1d2731')
@@ -26,7 +32,15 @@ head
                     a.nav-link(href='/' style='color: #d9b310') Update
 
 
-script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p' crossorigin='anonymous')
 
+    ul
+            each item, index in name
+                li.list-group-item
+                    p #{index + 1}
+                    p First Name: #{item.first}
+                    p Last Name: #{item.last}
+                    p DOB: #{item.born}
+
+script(src='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js' integrity='sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p' crossorigin='anonymous')
 
 
